static/css/timetable/partials/compare_timetable_sidebar.scss
@import "../framework/page_layout.scss";

.side-bar-compare-timetable {
  @include side-bar;
  left: calc(100% - 550px);
  width: 550px;
}

.main-bar-compare-timetable {
  @include main-bar;
  width: calc(100% - 550px);
  &.less-cal {
    width: calc(100% - 550px);
  }
}

.slots-rating {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.horizontal-bar {
  border-top: 2px solid rgba(196, 196, 196, 1);
  padding-top: 5px;
  margin: 0 10px;
}

.slots-comparison {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.slots-list {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  width: 250px;
}

.slots-separator {
  border-left: 2px solid rgba(196, 196, 196, 1);
  height: 80%;
  position: absolute;
  left: 50%;
  margin-left: -5px;
  top: 70px;
}

.compare-timetable-exit {
  position: absolute;
  right: 0;
  padding: 0.5rem;
  cursor: pointer;
}

.slots-title-wrapper {
  margin-bottom: 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.title-wrapper {
  width: 50%;
  margin-left: 10px;
  margin-right: 10px;
}

.slots-wrapper {
  height: 80%;
}

